--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "node start.js",
     "lint": "standard",
+    "lint-fix": "standard --fix",
     "test": "npm run lint && gulp generate-assets && jest"
   },
   "dependencies": {
