--- a/package.json
+++ b/package.json
@@ -58,5 +58,10 @@
     "node-sass": "^4.14.1",
     "standard": "^14.3.3",
     "supertest": "^4.0.2"
+  },
+  "standard": {
+    "globals": [
+      "$"
+    ]
   }
 }
